MediaPipe hands model 설정 변경

--- a/Training.ipynb
+++ b/Training.ipynb
@@ -1075,6 +1075,68 @@
     "\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:Layer lstm will not use cuDNN kernels since it doesn't meet the criteria. It will use a generic GPU kernel as fallback when running on GPU.\n",
+      "1/8 [==>...........................] - ETA: 1s"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-11-08 11:02:41.829466: I tensorflow/core/grappler/optimizers/custom_graph_optimizer_registry.cc:114] Plugin optimizer for device_type GPU is enabled.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8/8 [==============================] - 1s 109ms/step\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[[171,   8],\n",
+       "        [  5,  52]],\n",
+       "\n",
+       "       [[193,   5],\n",
+       "        [  3,  35]],\n",
+       "\n",
+       "       [[186,   1],\n",
+       "        [  4,  45]],\n",
+       "\n",
+       "       [[198,   4],\n",
+       "        [  7,  27]],\n",
+       "\n",
+       "       [[170,   8],\n",
+       "        [  7,  51]]])"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import multilabel_confusion_matrix\n",
+    "from tensorflow.keras.models import load_model\n",
+    "\n",
+    "model = load_model('models/model.h5')\n",
+    "\n",
+    "y_pred = model.predict(x_val)\n",
+    "\n",
+    "multilabel_confusion_matrix(np.argmax(y_val, axis=1), np.argmax(y_pred, axis=1))"
+   ]
   }
  ],
  "metadata": {
