새로운 수어 데이터셋 추출 및 학습 완료

--- a/Training.ipynb
+++ b/Training.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,16 +15,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(2354, 30, 100)"
+       "(3243, 30, 100)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -39,11 +39,11 @@
     "]\n",
     "\n",
     "data = np.concatenate([\n",
-    "    np.load('dataset/seq_사랑_1667807586.npy'),\n",
-    "    np.load('dataset/seq_솔직하다_1667807586.npy'),\n",
-    "    np.load('dataset/seq_저울_1667807586.npy'),\n",
-    "    np.load('dataset/seq_빵_1667807586.npy'),\n",
-    "    np.load('dataset/seq_근육_1667807586.npy')\n",
+    "    np.load('dataset/seq_사랑_1667888458.npy'),\n",
+    "    np.load('dataset/seq_솔직하다_1667888458.npy'),\n",
+    "    np.load('dataset/seq_저울_1667888458.npy'),\n",
+    "    np.load('dataset/seq_빵_1667888458.npy'),\n",
+    "    np.load('dataset/seq_근육_1667888458.npy')\n",
     "], axis=0)\n",
     "\n",
     "data.shape"
@@ -51,15 +51,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(2354, 30, 99)\n",
-      "(2354,)\n"
+      "(3243, 30, 99)\n",
+      "(3243,)\n"
      ]
     }
    ],
@@ -73,16 +73,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(2354, 5)"
+       "(3243, 5)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -96,15 +96,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(2118, 30, 99) (2118, 5)\n",
-      "(236, 30, 99) (236, 5)\n"
+      "(2918, 30, 99) (2918, 5)\n",
+      "(325, 30, 99) (325, 5)\n"
      ]
     }
    ],
@@ -122,42 +122,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:Layer lstm will not use cuDNN kernels since it doesn't meet the criteria. It will use a generic GPU kernel as fallback when running on GPU.\n",
-      "Metal device set to: Apple M1\n",
-      "\n",
-      "systemMemory: 16.00 GB\n",
-      "maxCacheSize: 5.33 GB\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2022-11-07 18:35:51.540681: I tensorflow/core/common_runtime/pluggable_device/pluggable_device_factory.cc:306] Could not identify NUMA node of platform GPU ID 0, defaulting to 0. Your kernel may not have been built with NUMA support.\n",
-      "2022-11-07 18:35:51.541148: I tensorflow/core/common_runtime/pluggable_device/pluggable_device_factory.cc:272] Created TensorFlow device (/job:localhost/replica:0/task:0/device:GPU:0 with 0 MB memory) -> physical PluggableDevice (device: 0, name: METAL, pci bus id: <undefined>)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model: \"sequential\"\n",
+      "WARNING:tensorflow:Layer lstm_3 will not use cuDNN kernels since it doesn't meet the criteria. It will use a generic GPU kernel as fallback when running on GPU.\n",
+      "Model: \"sequential_3\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " lstm (LSTM)                 (None, 64)                41984     \n",
+      " lstm_3 (LSTM)               (None, 64)                41984     \n",
       "                                                                 \n",
-      " dense (Dense)               (None, 32)                2080      \n",
+      " dense_6 (Dense)             (None, 32)                2080      \n",
       "                                                                 \n",
-      " dense_1 (Dense)             (None, 5)                 165       \n",
+      " dense_7 (Dense)             (None, 5)                 165       \n",
       "                                                                 \n",
       "=================================================================\n",
       "Total params: 44,229\n",
